Closed
Bug 610038
Opened 15 years ago
Closed 15 years ago
apply ignores indexed properties on arrays and arguments objects with holes
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: luke, Unassigned)
References
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
3.16 KB,
patch
|
Waldo
:
review+
|
Details | Diff | Splinter Review |
Part of the bug (arrays with holes) is a recent regression from bug 605192 and bug 595884, and the other half (arguments objects with holes) is older.
Attachment #488577 -
Flags: review?(jwalden+bmo)
Comment 1•15 years ago
|
||
Comment on attachment 488577 [details] [diff] [review]
fix and test
I think I reviewed at least one of these botches. :-(
Attachment #488577 -
Flags: review?(jwalden+bmo) → review+
| Reporter | ||
Comment 2•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 3•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•