Bug 610038 - apply should not ignore indexed properties on the prototype (r=waldo)